--- a/_data/recs.yaml
+++ b/_data/recs.yaml
@@ -342,18 +342,18 @@ list:
         older siblings probably did not help with this.)
       - But at the same time, he was a fucking nerd - he picked out doorknobs
         and chandeliers for his sister's house and then put "architect" on his
-        letterhead for a full decade afterwards. He was crazy - in one of the
-        book's funnier anecdotes, he enlists in the army after deciding he
-        hasn't experienced enough hardship (really!), but due to his family's
-        influence he's assigned a desk job, so he goes to request reassignment,
-        confusing the officer on duty who takes a while to realize he wants to
-        go <i>to</i> the front lines! And he was maybe-very-probably gay -
-        though we don't have conclusive evidence afaik, it's like, come on. The
-        guy did some of his best work while sharing a two-person rowboat with
-        his guy friend who happened to come visit him in the mountains for a
-        few months. There is a neverending series of scenes like this, each
-        more rife with subtext than the last. If it were fiction it would be
-        blatant queerbaiting.
+        letterhead for years afterwards. He was crazy - in one of the book's
+        funnier anecdotes, he enlists in the army after deciding he hasn't
+        experienced enough hardship (which, to be fair, was probably true), but
+        due to his family's influence he is assigned a desk job. After a while
+        he goes to request reassignment, confusing the officer on duty who
+        takes a while to understand that Wittgenstein wants to go <i>to</i> the
+        front lines! And he was maybe-very-probably gay - though we don't have
+        conclusive evidence afaik, it's like, come on. The guy did some of his
+        best work while sharing a two-person rowboat with his guy friend who
+        happened to come visit him in the mountains for a while. There is a
+        neverending parade of scenes like this, each more rife than the last.
+        If it were fiction it would be accused of queerbaiting.
       - Wittgenstein has a reputation as one of the more difficult, if not
         impossible, of the modern philosophers - undeniably brilliant, but hard
         to read even on a good day. If you're interested, this might be the
@@ -363,35 +363,36 @@ list:
   - title: Data and Goliath
     desc:
       - Schneier's best book (in my opinion). And yes, I'm including the books
-        on cryptography, which were epochal for their time but are showing
-        their age. This book is encyclopedic. I wrote about in more detail
+        on cryptography, which were epochal but are showing their age. This
+        book is encyclopedic. I wrote about it in more detail
         <a href="2017/09/12/book-notes.html">here</a>, though I might have laid
         the praise on a little heavy (it's amazing what six years of
         perspective can do).
-      - Basically, this is <i>the</i> book on big data and surveillance circa
-        2015. It is comprehensive and packed to the seams with details. One of
-        the most information-dense books I've ever read. I was amazed by how
-        many of the projects described in it were unfamiliar to me, even though
-        I do my best to keep up with the news in this space.
-      - This book is almost a decade old at this point, and I'd love to see an
-        updated edition, but it is still worth reading.
+      - This is <i>the</i> book on big data and surveillance circa 2015. It is
+        comprehensive and packed to the stitches with detail. It's one of the
+        most information-dense books I've ever read. I was amazed by how many
+        of the projects described in it were unfamiliar to me, even though I do
+        my best to be aware of what's happening in this space.
+      - This book is almost a decade old at this point, and I'd really like to
+        see an updated edition; that said, it is still worth reading.
 
   - title: The History of Western Philosophy
     desc:
       - >
-        Full disclosure: I read this cover-to-cover in high school, and I
-        referred back to it in college as my English classes required. Other
-        than that, I haven't gone back to it since, so I'm writing from
-        memory here. But I recall this being a very good book.
+        Full disclosure: I read this cover-to-cover in high school, and I went
+        back to it in college as my classes required. Other than that, I
+        haven't gone back to it since, so I'm writing from memory here. But I
+        recall this being a very good book. In particular, it's like a cheat
+        code for undergrad philosophy classes.
       - Bertrand Russell's greatest skill was repackaging others' ideas for a
-        lay audience. That sounds like an insult, and I haven't made up my mind
-        about whether or not I intend it as one. But the fact is, this is a
-        useful skill and it makes him the ideal author for this type of book.
-      - The book's scope is startlingly broad. It starts in pre-Socratic
-        Greece, and just continues forward from there, recounting the views and
-        ideas of everyone who Russell thought to be worth including. He limits
-        the scope to western philosophers, which is unfortunate but not
-        surprising, and still leaves him with plenty of good material.
+        lay audience. That sounds like an insult; I haven't made up my mind
+        on whether I mean it as one. But the fact is, this is a useful skill
+        and it makes him the ideal author for this type of book. - The book's
+        scope is startlingly broad. It starts in pre-Socratic Greece, and just
+        continues forward from there, recounting the views and ideas of
+        everyone who Russell thought to be worth including. He limits the scope
+        to western philosophers, which is unfortunate but not surprising, and
+        still leaves him with plenty of good material.
       - In particular, he never fails to point out what he perceives to be the
         flaws in other philosophers' works. Sometimes I agree with him and
         sometimes I think he is arguing against strawmen; that said, either
@@ -399,14 +400,14 @@ list:
 
   - title: Suspended in Language
     desc:
-      - I read this book as a kid and I enjoyed it very much. I've revisited it
-        many times - it might be the most heavily worn book on my shelf. This
-        book - I guess it's technically a graphic novel, but who cares - paints
-        a beautiful, compelling, personal view of Niels Bohr. He was a talented
+      - I read this as a kid and I enjoyed it very much. I've revisited it many
+        times - it might be the most heavily worn book on my shelf. This book -
+        I guess it's technically a graphic novel, but who cares - paints a
+        beautiful, compelling, personal view of Niels Bohr. He was a talented
         physicist, but also one who was in the right place at the right time
         with the right ideas; what makes him interesting is the degree to which
-        those ideas, while correct, seem to have come to him by something other
-        than the scientific method.
+        those ideas, which were mostly correct, seem to have come to him by
+        something other than the scientific method.
       - >
         This is not to talk down on him as a scientist: he was definitely a
         scientist, and a very good one. He was also a philosopher and a poet,
@@ -415,23 +416,25 @@ list:
         colleagues and students.
       - In his personal life, he seems to have been - according to the picture
         painted in this book - gentle, soft-spoken, moral, kind, diplomatic,
-        and just an all-around great guy. This is an easy image to keep up in
-        peace, but Bohr lived through the second world war, and one of the
-        book's most compelling chapters recounts his encounter with Werner
-        Heisenberg - who was working for the germans - during the war. The
-        depiction is haunting, historically accurate, honest about the limits
-        of what is known about their conversation, and beautifully drawn.
+        and just an all-around great guy. This is an easy image to maintain
+        during peace, but Bohr lived through the second world war.
+      - One of the book's most compelling sections deals with his wartime walk
+        and conversation with Werner Heisenberg, a colleague and former friend
+        of his who was working for the germans. The depiction is haunting,
+        historically accurate, honest about the limits of what is known about
+        their conversation, and beautifully drawn.
       - I love stories about the lives of scientists. These are people who give
         themselves over completely to one thing. Why do they do it? Who are
         they? What drives them? What is the rest of their life like? What
-        relationships do they have with their colleagues? These are the
-        questions I want to see explored, and this book shares my interests.
+        relationships do they have with their colleagues, their friends, their
+        partners, their children? These are the questions I want to see
+        explored, and this book shares my interests.
 
   - title: Fine, Fine, Fine, Fine, Fine
     desc:
       - Diane Williams is a treasure. These are tiny stories, and this will be
-        a tiny review. The book is good, easy to read, and rewarding to dwell
-        on. I've written about it before. It's from McSweeney's, which as a
+        a tiny note. The book is good. It's easy to read and rewarding to dwell
+        on. I've written about it before. It comes via McSweeney's, which as a
         publishing house tends to be terminally twee, but they really scored
         big on this one.
 
@@ -442,9 +445,9 @@ list:
         defies description and feels almost like stunt-writing, like something
         that shouldn't work but does, like she picked five or ten topics from a
         hat and committed to writing about all of them at once, just to see if
-        she could - and it turns out she can, The book is a nonstop series of
-        unexpected threads that combine and weave these topics together into a
-        coherent whole. You almost can't believe your eyes as you're reading
+        she could - and it turns out that she can! The book is a nonstop series
+        of unexpected threads that combine and weave these topics together into
+        a coherent whole. You almost can't believe your eyes as you're reading
         it. She is so good at this. A delight to read, as always.
       - I have more detailed notes that I'll dig up and put here eventually,
         but for now this will have to do.
@@ -452,19 +455,20 @@ list:
   - title: The Breakthrough to Shodan
     desc:
       - >
-        I've read many books on Go. This is the one I recommend. It is not an
+        I've read many books on Go. This is the book I recommend. It is not an
         introductory book (for that, Kaoru Iwamoto's book would be a good
         choice), but once you've reached single-digit kyu strength, this is
-        what you should read. One pro player has joked that the book should be
-        titled "The Breakthrough to Professional Shodan" (i.e. approximately 9
-        Dan).
+        what you should read. One pro player has quipped that the book should
+        be titled "The Breakthrough to Professional Shodan" (i.e. approximately
+        9 Dan).
       - >
         A point of disambiguation: "Shodan" is an overloaded word. In Go, it
         refers to the changeover point where a former Kyu-ranked player earns
-        their first Dan rank. This is analogous to the changeover to a black
-        belt in some martial arts (which, in fact, seem to have borrowed the
-        kyu/dan system from Go). For most amateur players, achieving a dan
-        rating is their ultimate goal. It certainly is mine.
+        their first Dan rank. This is analogous to the shift from a colored
+        belt to a black belt in some martial arts (which, in fact, seem to have
+        borrowed the kyu/dan system from Go). For most amateur players,
+        achieving a dan rating is their ultimate aspiration. It certainly is
+        mine.
       - >
         <a href="https://online-go.com/player/95926/">I'm currently rated around 3 Kyu on OGS</a>
         (feel free to send me a challenge if you play, by the way!), so I can't
@@ -687,25 +691,27 @@ list:
         have thoroughly and unironically enjoyed. This book helped me decide
         where to place my desk, and it worked perfectly.
       - >
-        The basic argument: Feng Shui is (in simple, bastardized, westernized
-        terms) about balancing flows of energy within a space. You don't want
-        a space to feel too chaotic or too stagnant - you want areas of rest
-        and areas of motion, with balance between them.
-      - By watching how your cat engages with the spaces you put them in, you
-        can see what they understand to be the areas of rest and motion - where
-        do they sleep, and where do they go to run around when they've got the
-        2 AM crazies?
-      - In this sense, your cat is engaged in dialogue with the space around
-        them, and you can listen in on this dialogue and use it to inform how
-        you design your space. This sounds kind of crazy, but it actually
-        works. The rest of the book goes into way more detail about Feng Shui
-        concepts and how they can be seen through this lens, and it is a
-        surprisingly approachable, down-to-earth, and even convincing
-        exposition of something that I always thought to be kind of hand-wavey
-        and disreputable.
-      - In particular, because your cat doesn't know Feng Shui, they are
-        completely incapable of being taken in by any new-age nonsense, which
-        makes them an excellent collaborator.
+        Among other things, Feng Shui is (in basic, westernized terms)
+        concerned with the balance of flows of "energy" within a space. You
+        don't want a space to feel too chaotic or too stagnant - you want areas
+        of rest and areas of motion, with balance between them.
+      - By watching how your cat engages with your space, you can see what they
+        understand to be the areas of rest and motion - where do they sleep,
+        and where do they go to run around when they've got the 2 AM crazies?
+      - Your cat is engaged in constant dialogue with the space around them,
+        and you can listen in on this dialogue and use it to help inform how
+        you craft your space. This sounds kind of crazy, and maybe it is, but
+        it actually works.
+      - >
+        A cat's input can be surprisingly grounding. Your cat (allegedly)
+        doesn't understand language, so they are completely incapable of being
+        taken in by any new-age nonsense, which makes them an excellent
+        collaborator.
+     - The rest of the book goes into way more detail and is a surprisingly
+       approachable, down-to-earth, and even convincing exposition of something
+       that I always thought to be kind of hand-wavey and even disreputable. If
+       I'm being honest, I still kind of see it that way, but I can't deny the
+       results.
 
   - title: Governing the Commons
     desc:
@@ -822,13 +828,22 @@ list:
   - title: Makers
 
   - title: Someone Comes to Town, Someone Leaves Town
-    desc: This is a sleeper pick in the Cory Doctorow bibliography. It probably
-      wouldn't be in most people's top 3. That said, I liked it. The thing is,
-      most of his books feel like vehicles for ideas; this is the only one I've
-      read where it felt like the characters came first.
+    desc:
+      - This is a sleeper pick in the Cory Doctorow bibliography. It probably
+        wouldn't be in most people's top 3. That said, I liked it. The thing
+        is, most of his books feel like vehicles for ideas; this might be the only
+        one I've read where it felt like the characters came first. I found it
+        to be disarmingly sincere and evocative.
 
   - title: "Computer Systems: A Programmer's Perspective"
 
   - title: Deaf Republic
+    desc:
+      - I'd never seen a poem written in sign language until I read this book.
+      - I don't read a lot of poetry, but I was lucky enough to read this and I
+        was blown away by it. Excerpts from it have gone viral (you may have
+        seen "we lived happily during the war"), but they sell it short. Each
+        poem stands on its own, but they are anything but disjointed; the whole
+        is greater than the sum of its parts.
 
   - title: Something Like an Autobiography
