--- a/_data/recs.yaml
+++ b/_data/recs.yaml
@@ -645,7 +645,7 @@ list:
         finished his Wittgenstein book, he realized he was already halfway to a
         book on Russell and he figured, what the hell, let's finish it off.
       - >
-        The catch: He <i>really does not like Bertrand Russell.</i> And when you
+        The catch: <i>He really does not like Bertrand Russell.</i> And when you
         read this book, you will understand why. It's important to emphasize
         that Monk is not <i>unfair</i> to the man, but he is absolutely merciless in
         his choice of (for example) extended block quotes from Russell's
@@ -707,11 +707,11 @@ list:
         doesn't understand language, so they are completely incapable of being
         taken in by any new-age nonsense, which makes them an excellent
         collaborator.
-     - The rest of the book goes into way more detail and is a surprisingly
-       approachable, down-to-earth, and even convincing exposition of something
-       that I always thought to be kind of hand-wavey and even disreputable. If
-       I'm being honest, I still kind of see it that way, but I can't deny the
-       results.
+      - The rest of the book goes into way more detail and is a surprisingly
+        approachable, down-to-earth, and even convincing exposition of something
+        that I always thought to be kind of hand-wavey and even disreputable. If
+        I'm being honest, I still kind of see it that way, but I can't deny the
+        results.
 
   - title: Governing the Commons
     desc:
