--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -129,7 +129,7 @@
   details:
     - Project Euler is a bafflingly extensive set of problems situated in the
       overlap of math and computer science. Back in high school I was really
-      into these, <a href="https://projecteuler.net/progress=wootfish">as you
+      into these, <a href="https://projecteuler.net/profile/wootfish.png">as you
       can see</a>, and despite having barely touched them in the last decade
       I'm still ranked in the 99.3rd percentile.
     - Unlike Cryptopals, Project Euler strongly discourages people from sharing
