tightened up a rec

--- a/_data/recs.yaml
+++ b/_data/recs.yaml
@@ -245,37 +245,24 @@ list:
     desc:
       - One for the cynics. It is broadly considered common sense, especially
         in america, to assume that in a crisis situation people will instantly
-        be at each other's throats. Everyone thinks they'll be the one
-        level-headed person surrounded by maniacs. Some people often ask
-        themselves whether they could, if need be, act as a maniac in order to
-        survive among them.
-      - Disaster movies reinforce this narrative at every opportunity, framing
-        catastrophes as moments of rupture where subterranean resentments can
-        finally erupt to the surface, simmering conflicts instantly come to a
-        rolling boil, and well-intentioned people are the first ones to die.
-      - What's interesting is, this is the opposite of what happens in real
-        life. A Paradise Built in Hell (subtitled "the extraordinary
-        communities that arise in disaster") is a book about what happens in
-        real life.
-      - It starts with the great San Francisco earthquake and fire of 1906.
-        Next up is the Halifax munitions accident of 1917, which at the time
-        was the largest artificial explosion in history. Then we skip forward
-        to the 1985 earthquake in Mexico City. After that come Katrina and
-        9/11.
+        be at each other's throats. What's interesting is, this is the opposite
+        of what happens in real life. A Paradise Built in Hell (subtitled "the
+        extraordinary communities that arise in disaster") is a book about what
+        happens in real life.
       - >
         This might sound like depressing fare, but what saves it is the book's
-        focus: on the people who survived, on what their lives were like at the
+        focus: on the people who survived, what their lives were like at the
         center of these moments, on what they did, who they did it with, and
-        how they looked back on the events after they were over.
+        how they looked back on it after the fact.
       - The common themes are of people coming together, setting aside
         differences, uniting in a common struggle - basically all those cliche
         utopian ideals that we want to believe in but usually reject as naive.
         Well, here they are, writ large and told through first-person accounts.
       - The author, Rebecca Solnit, is one of my favorite authors currently
-        working. This is sort of an outlier in her extensive bibliography, less
-        autobiographical than usual, but somehow it feels just as personal,
-        because you can see her values reflected through the stories she has
-        collected and shared here.
+        working. This is sort of an outlier in her work, less autobiographical
+        than usual, but somehow it feels just as personal because you can see
+        the values reflected through the stories she has collected and shared
+        here.
 
   - title: The Utopia of Rules
     desc:
