Light edits on some static content

--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -43,7 +43,7 @@
 
     - So far, the reception has been overwhelmingly positive (it spent a day in
       the top ten on Hacker News!), and I am planning to continue the series
-      for as long as my employer continues supporting it.
+      for the foreseeable future.
 
 - name: fuzzy math visuals
   details:
